<resources>

    <string name="app_name">RunForLife</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgot">ForgotPassActivity</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2059758367585367</string>
    <string name="google_maps_app_id">AIzaSyDrp1ZPEL7gG4_mGCTijEyL4nB_qOcI1oM</string>
    <string name="fb_login_protocol_scheme">fb2059758367585367</string>
    <string name="hashkey">NjNlibFJTSKCeM5pttcbs5cNuDg=</string>
    <string name="fb_app_id">2059758367585367</string>
    <string name="nav_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <integer name="google_play_services_version">8115000</integer>

    <!--Start fragment strings-->
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="currentVelocity">Current speed</string>
    <string name="calories">Calories</string>

    <string name="distance_dummy">0.0 m</string>
    <string name="duration_dummy">0:00 h</string>
    <string name="currentVelocity_dummy">0.0 km/h</string>
    <string name="calories_dummy">0.0 Ka</string>

    <string name="abbr_min">min</string>
    <string name="abbr_sec">sec</string>
    <string name="separator">.</string>

    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="searching_signal">Searching for GPS signal</string>
    <string name="activate_gps">GPS disabled, please activate it!</string>

    <string name="title_section1">Overview</string>
    <string name="drawer_blocked">Blocked while recording</string>
    <string name="running">running</string>
    <string name="stop_recording">Stop recording</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Details Fragment strings-->
    <string name="total_distance">Total distance:</string>
    <string name="total_duration">Total duration:</string>
    <string name="max_velocity">Maximum velocity:</string>
    <string name="avg_velocity">Average velocity:</string>
    <string name="total_ascent">Total ascent:</string>
    <string name="total_descent">Total descent:</string>
    <string name="total_break">Total break:</string>
    <string name="total_calories">Total calories:</string>
    <string name="hour_calories">Calories per hour:</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <!--Profile Fragment strings-->
    <string name="profile_photo">Profile photo:</string>
    <string name="imageProfile">Your profile photo</string>
    <string name="name">Name:</string>
    <string name="name_info">Your name here</string>
    <string name="email">Email</string>
    <string name="email_info">Your email here</string>
    <string name="gender">Gender</string>
    <string name="female_button">Female</string>
    <string name="male_button">Male</string>
    <string name="weight">Weight (kg)</string>
    <string name="weight_info">In kg</string>
    <string name="height">Height (cm)</string>
    <string name="height_info">In cm</string>
    <string name="age">Age</string>
    <string name="age_info">Current age</string>
    <string name="heartRate">Heart Rate</string>
    <string name="heartRate_info">20 Second Resting Heart Rate</string>
    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>

    <!-- Run details strings-->
    <string-array name="type_activities">
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>
    </string-array>
    <string name="surface_text">Walking Surface Grade</string>
    <string name="running_surface_text">Running Surface Grade</string>
    <string name="distance_text">Walk Distance</string>
    <string name="running_distance_text">Run Distance</string>
    <string name="time_text">Walk Time</string>
    <string name="gpx_text">Upload a route (optionally)</string>
    <string name="walk_button">GO FOR A WALK</string>
    <string name="run_button">GO FOR A RUN</string>
    <string name="ride_button">GO FOR A RIDE</string>
    <string name="treadmill">On Treadmill?</string>
    <string name="intensity_text">Cycling Intensity</string>
    <string-array name="level_surface">
        <item>5% Decline</item>
        <item>4% Decline</item>
        <item>3% Decline</item>
        <item>2% Decline</item>
        <item>1% Decline</item>
        <item>0% Decline</item>
        <item>1% Incline</item>
        <item>2% Incline</item>
        <item>3% Incline</item>
        <item>4% Incline</item>
        <item>5% Incline</item>
        <item>6% Incline</item>
        <item>7% Incline</item>
        <item>8% Incline</item>
        <item>9% Incline</item>
        <item>10% Incline</item>
        <item>11% Incline</item>
        <item>12% Incline</item>
        <item>13% Incline</item>
        <item>14% Incline</item>
        <item>15% Incline</item>
        <item>No need</item>
    </string-array>
    <string-array name="run_surface">
        <item>20% Decline</item>
        <item>19% Decline</item>
        <item>18% Decline</item>
        <item>17% Decline</item>
        <item>16% Decline</item>
        <item>15% Decline</item>
        <item>14% Decline</item>
        <item>13% Decline</item>
        <item>12% Decline</item>
        <item>11% Decline</item>
        <item>10% Decline</item>
        <item>9% Decline</item>
        <item>8% Decline</item>
        <item>7% Decline</item>
        <item>6% Decline</item>
        <item>5% Decline</item>
        <item>4% Decline</item>
        <item>3% Decline</item>
        <item>2% Decline</item>
        <item>1% Decline</item>
        <item>0% Decline</item>
        <item>1% Incline</item>
        <item>2% Incline</item>
        <item>3% Incline</item>
        <item>4% Incline</item>
        <item>5% Incline</item>
        <item>6% Incline</item>
        <item>7% Incline</item>
        <item>8% Incline</item>
        <item>9% Incline</item>
        <item>10% Incline</item>
        <item>11% Incline</item>
        <item>12% Incline</item>
        <item>13% Incline</item>
        <item>14% Incline</item>
        <item>15% Incline</item>
        <item>No need</item>
    </string-array>
    <string-array name="treadmill">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="cycling">
        <item>lower than 16 kph</item>
        <item>16-19 kph, light effort</item>
        <item>19-22 kph, moderate effort </item>
        <item>22-25 kph, vigorous effort</item>
        <item>25-30 kph, very fast</item>
        <item>higher than 30 kph"</item>
        <item>bmx or mountain</item>
        <item>unicycling</item>
    </string-array>
    <string-array name="activity_level">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extremely Active</item>
    </string-array>

</resources>
